# XmlGen

./: CMakeLists.txt  README.md
src/: main.cpp  pugixml.hpp  xmlgen.cpp  xmlgen.h
